feat(runtime): generate stable Node SDK